v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router-v1
  labels: 
    app: router
    version: v1
spec: 
  replicas: 3
  selector:
    matchLabels: 
      app: router
      version: v1
  template:
    metadata:
      name: router-v1
      labels: 
        app: router
        version: v1

    spec:
      containers:
      - name: backend
        image: nginx:latest
        ports: 
        - containerPort: 8000
