v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router-v2
  labels:
    app: router
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: router
      version: v2
  template:
    metadata:
      name: router-v2
      labels:
        app: router
        version: v2

    spec:
      containers:
      - name: backend
        image: nginx:latest
        ports:
        - containerPort: 8000
