v3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router-v3
  labels:
    app: router
    version: v3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: router
      version: v3
  template:
    metadata:
      name: router-v3
      labels:
        app: router
        version: v3

    spec:
      containers:
      - name: backend
        image: nginx:latest
        ports:
        - containerPort: 8000
