service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-v1-svc
spec:
  selector:
    app: router
    version: v1
  ports:
    - port: 80
      targetPort: 8000
