v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-v2-svc
spec:
  selector:
    app: router
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
