v3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-v3-svc
spec:
  selector:
    app: router
    version: v3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8003
