v1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-ingress-v1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie" # Sticky Sessions
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  rules:
  - host: router.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router-v1-svc
            port:
              number: 80
