v3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-ingress-v3
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20" # 20% Traffic to v3
    nginx.ingress.kubernetes.io/affinity: "cookie" # Sticky Sessions
spec:
  rules:
  - host: router.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router-v3-svc
            port:
              number: 80
